# ml_autoscaler

./: .gitignore  ADAPTATION_GUIDE.md  DEPLOYMENT_K3S.md  Dockerfile  README.md  check-prerequisites.sh  etat_de_l_art  install.sh  integrate-with-nexslice.sh  ml-deploy-final.yaml  pyproject.toml  quick-test.sh  requirements.txt  validate-deployment.sh  variables.conf
autoscaling/: k3s-autoscaling.py  k3s-autoscaling.service  ml_autoscaler.py
kubernetes/: deployment.yml  ml-autoscaler-deployment.yml
kubernetes/k8s-prometheus/: prometheus-deployment.yaml
kubernetes/kube-state-metrics/: deployment.yaml
kubernetes/nexslice-monitoring/: nexslice-monitoring.yaml
monitoring/: blackbox-probe.yaml
terraform/master_node/: main.tf
terraform/worker_node/: main.tf
tests/: benchmark.py  locust.py  network_load_generator.py
